--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -10,7 +10,7 @@
 		<div class="header-container">
 			<div class="head-contents">
 				<header>
-					<h1 id="banner">Arture</h1>
+					<h1 id="banner"><a href="http://192.168.1.209" style="text-decoration: none;color: inherit">Arture</a></h1>
 					<div class="login">
 						<form action="{% url 'login:signin' %}" method="POST">{% csrf_token %}
 							<span id="guide-id">이메일 또는 휴대폰</span>
