--- a/static/css/style.css
+++ b/static/css/style.css
@@ -168,25 +168,33 @@ body {
 }
 .result {
 	background-color: white;
-	padding: 8px 2px 5px 2px;
 	width: 377px;
-	height: 40px;
+	height: 45px;
 }
 .result-img {
 	height: 41px;
 	width: 41px;
+
+	position: absolute;
+	top: 3px;
+	left: 3px;
 }
 .result-name {
 	color: #568573;
 	font-size: 12px;
+	
 	position: absolute;
+	left: 47px;
+	top: 14px;
 }
 .result-button {
 	width: 100%;
 	height: 100%;
+
 	cursor: pointer;
+	position: relative;
 }
-.result-button:hover .result {
+.result-button:hover {
 	background-color: #568573;
 }
 .result-button:hover .result-name {
